--- a/framework/libcnf/win32.proj.vc/libcnf.vcxproj.filters
+++ b/framework/libcnf/win32.proj.vc/libcnf.vcxproj.filters
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\configfile.cpp" />
-    <ClCompile Include="..\configfiledll.cpp" />
+    <ClCompile Include="..\configurer.cc" />
+    <ClCompile Include="..\libcnf.cc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\configfile.h" />
+    <ClInclude Include="..\configurer.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\configfiledll.def" />
+    <None Include="..\libcnf.def" />
   </ItemGroup>
 </Project>
