--- a/framework/libcnf/proj_win32_vs2012/libcnf.vcxproj
+++ b/framework/libcnf/proj_win32_vs2012/libcnf.vcxproj
@@ -201,7 +201,7 @@
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\..\include\base;..\..\..\include\interface;..\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\include\libbase;..\..\..\include\interface;..\</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;libcnfDLL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
