--- a/framework/libbase/proj_win32_vs2012/libbase.vcxproj.filters
+++ b/framework/libbase/proj_win32_vs2012/libbase.vcxproj.filters
@@ -17,5 +17,6 @@
     <ClCompile Include="..\thread.cc" />
     <ClCompile Include="..\tlib_cfg.cc" />
     <ClCompile Include="..\tlib_log.cc" />
+    <ClCompile Include="..\dynamiclibloader.cc" />
   </ItemGroup>
 </Project>
