--- a/framework/libcommon/proj_win32_vs2012/libcommon.vcxproj
+++ b/framework/libcommon/proj_win32_vs2012/libcommon.vcxproj
@@ -90,7 +90,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>../../../include/interface;../../../include/libbase;../../../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../include/interface;../../../include/libcommon;../../../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_DEBUG;WIN32;_WINDOWS;_common;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -109,7 +109,7 @@
     </ResourceCompile>
     <Lib>
       <AdditionalDependencies>atlsd.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>../../../libs/libbase.lib</OutputFile>
+      <OutputFile>../../../libs/libcommon.lib</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
     </Lib>
     <Bscmake>
