--- a/framework/netio/proj_win32_msvc2012/netio.vcxproj
+++ b/framework/netio/proj_win32_msvc2012/netio.vcxproj
@@ -40,7 +40,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <TargetName>netio</TargetName>
-    <OutDir>..\..\..\run\netio\bin</OutDir>
+    <OutDir>..\..\..\run\netio\bin\</OutDir>
+    <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -48,12 +49,19 @@
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>../../../include;../../../include/interface;../../../include/libcommon;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <OmitFramePointers />
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <OutputFile>../../../run/netio/bin/netio.exe</OutputFile>
+      <OutputFile>..\..\..\run\netio\bin\netio.exe</OutputFile>
       <AdditionalLibraryDirectories>../../../libs/</AdditionalLibraryDirectories>
       <AdditionalDependencies>WS2_32.lib;libcommon.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OptimizeReferences>
+      </OptimizeReferences>
+      <EnableCOMDATFolding>
+      </EnableCOMDATFolding>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
