--- a/framework/netio/proj_win32_msvc2012/netio.vcxproj
+++ b/framework/netio/proj_win32_msvc2012/netio.vcxproj
@@ -43,8 +43,9 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <TargetName>netio</TargetName>
-    <OutDir>..\..\..\run\netio\bin\</OutDir>
+    <OutDir>..\..\..\run\netio\bin</OutDir>
     <LinkIncremental>false</LinkIncremental>
+    <IntDir>$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
