1. ignore *.so; 2. edit liblog's makefile.
Signed-off-by: xushuai <xushvai@gmail.com>

--- a/framework/liblog/makefile
+++ b/framework/liblog/makefile
@@ -4,14 +4,14 @@ COMMON = ./
 
 BUILD_DIR=../..
 
-HEADFILE = -I$(BUILD_DIR)/include/base -I$(BUILD_DIR)/include/interface
+HEADFILE = -I$(BUILD_DIR)/include -I$(BUILD_DIR)/include/base -I$(BUILD_DIR)/include/interface
 CFLAGS = -g $(HEADFILE) -fpic
-OBJ = logfile.o
+OBJ = logger.o
 
 #LDFLAGS= ../../../../../framework/lib/ -lcommon
-OI_LIB = $(BUILD_DIR)/lib/libcommon.a
+OI_LIB = $(BUILD_DIR)/libs/libcommon.a
 
-BIN = $(BUILD_DIR)/dll/logfile.so
+BIN = $(BUILD_DIR)/libs/liblog.so
 
 all : $(BIN)
 
@@ -19,8 +19,8 @@ $(BIN) : $(OBJ)
 	rm -f $@
 	$(CPP) -o $@ $(CFLAGS) $(OBJ) $(OI_LIB)   -shared
 
-logfile.o : logfile.cpp logfile.h
-	$(CPP)  -c -o $@ $(CFLAGS) logfile.cpp
+logger.o : logger.cc logger.h
+	$(CPP)  -c -o $@ $(CFLAGS) logger.cc
 
 clean:
 	rm -f $(BIN) $(OBJ)
