--- a/framework/netio/CMakeLists.txt
+++ b/framework/netio/CMakeLists.txt
@@ -4,4 +4,4 @@ project(netio)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cc)
-add_executable(untitled ${SOURCE_FILES})
+add_executable(netio ${SOURCE_FILES})
