--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,16 @@ tags
 *.lib
 *DS_Store
 
+# for visual studio
+# -----------------------------
 Win32
+
+# for CLion
+# -----------------------------
+workspace.xml
+
+
+
 
 *.swp
 *.a
