--- a/framework/netio/CMakeLists.txt
+++ b/framework/netio/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.2)
 project(netio)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
 set(SOURCE_FILES main.cc)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../run/netio/bin/")
 add_executable(netio ${SOURCE_FILES})
