--- a/framework/netio/proj_win32_msvc2012/netio.vcxproj.filters
+++ b/framework/netio/proj_win32_msvc2012/netio.vcxproj.filters
@@ -11,7 +11,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="..\main.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
