--- a/framework/netio/makefile
+++ b/framework/netio/makefile
@@ -10,6 +10,9 @@ $(BIN):$(OBJ)
 main.o:main.cc
 	$(CPP) -g -c main.cc
 
+socket_api.o:socket_api.cc ../../include/libcommon/socket_api.h
+	$(CPP) -g -c main.cc
+
 clean:
 	rm -f $(BIN) $(OBJ)
 
