--- a/framework/netio/makefile
+++ b/framework/netio/makefile
@@ -11,7 +11,7 @@ main.o:main.cc
 	$(CPP) -g -c main.cc
 
 socket_api.o:../libcommon/socket_api.cc ../../include/libcommon/socket_api.h
-	$(CPP) -g -c socket_api.cc
+	$(CPP) -g -c ../libcommon/socket_api.cc
 
 clean:
 	rm -f $(BIN) $(OBJ)
