add thread file.
Signed-off-by: xushuai_rmbp <xushvai@gmail.com>

--- a/framework/netio/makefile
+++ b/framework/netio/makefile
@@ -1,6 +1,7 @@
 CPP=g++
 BIN=../../run/netio/bin/netio
 OBJ=main.o socket_api.o
+INC=../../include/libcommon
 
 all:$(BIN)
 
@@ -10,8 +11,11 @@ $(BIN):$(OBJ)
 main.o:main.cc
 	$(CPP) -g -c main.cc
 
-socket_api.o:../libcommon/socket_api.cc ../../include/libcommon/socket_api.h
+socket_api.o:../libcommon/socket_api.cc $(INC)/socket_api.h
 	$(CPP) -g -c ../libcommon/socket_api.cc
+
+x_thread.o:../libcommon/x_thread.cc $(INC)/x_thread.h
+	$(CPP) -g -c ../libcommon/x_thread.cc
 
 clean:
 	rm -f $(BIN) $(OBJ)
