change config in proxy.cnf.
Signed-off-by: xushuai <xushuai@localhost.localdomain>

--- a/run/proxy/cnf/proxy.cnf
+++ b/run/proxy/cnf/proxy.cnf
@@ -4,6 +4,6 @@ DBSvrdNum      1
 MainSvrdNum    1 
 OtherSvrdNum   1
 
-DBSvrdsList    ./dbsvrds.list
-MainSvrdsList  ./mainsvrds.list
-OtherSvrdsList ./othersvrds.list
+DBSvrdsList    ../cnf/dbsvrds.list
+MainSvrdsList  ../cnf/insvrds.list
+OtherSvrdsList ../cnf/othersvrds.list
