just change name.
Signed-off-by: xushuai <xushvai@gmail.com>

--- a/framework/proxy/makefile
+++ b/framework/proxy/makefile
@@ -1,6 +1,6 @@
 CPP=g++
 BIN=../../run/proxy/bin/proxy
-OBJ=main.o handler.o x_thread.o controller.o x_tcpsocket.o socket_api.o tcpconnection.o 
+OBJ=main.o handler.o x_thread.o proxycontrol.o x_tcpsocket.o socket_api.o tcpconnection.o 
 INC=../../include/libcommon
 C_ARGS=-DXDBG
 
@@ -18,8 +18,8 @@ handler.o:handler.cc handler.h
 x_thread.o:../libcommon/x_thread.cc $(INC)/x_thread.h
 	$(CPP) $(C_ARGS) -g -c ../libcommon/x_thread.cc
 
-controller.o:controller.cc controller.h
-	$(CPP) $(C_ARGS) -g -c controller.cc
+proxycontrol.o:proxycontrol.cc proxycontrol.h
+	$(CPP) $(C_ARGS) -g -c proxycontrol.cc
 
 x_tcpsocket.o:../libcommon/x_tcpsocket.cc $(INC)/x_tcpsocket.h
 	$(CPP) $(C_ARGS) -g -c ../libcommon/x_tcpsocket.cc
